@@ -1,3 +1,9 @@
+Tue Jul  1 02:32:49 1997  Tom Yu  <tlyu@mit.edu>
+
+	* server_acl.h: Fix ACL_ALL_MASK to include ACL_SETKEY.
+
+	* svr_principal.c: Fix setv4key_principal.
+
 Sun Jun 29 14:52:51 1997  Tom Yu  <tlyu@mit.edu>
 
 	* svr_principal.c: Add new function kadm5_setv4key_principal.
